<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/mainview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.reggie.projectapp1.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView style="@style/TextIntro"
            android:id="@+id/intro"
            android:text="@string/intro" />

        <TableLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro">
            <TableRow>
                <ImageView style="@style/Icon"
                    android:contentDescription="@string/calendar_icon"
                    android:src="@drawable/calendar" />

                <TextView style="@style/TextStandard"
                    android:text="@string/opening_hours_mon_sat" />

                <TextView style="@style/TextStandard"
                    android:text="@string/opening_hours_sun" />

            </TableRow>

            <TableRow>
                <ImageView style="@style/Icon"
                    android:contentDescription="@string/phone_icon"
                    android:src="@drawable/phone"/>

                <TextView style="@style/TextStandard"
                    android:text="@string/phone"/>

                <TextView style="@style/TextStandard"
                    android:text="@string/mobile" />
            </TableRow>
        </TableLayout>

        <!--The following two linear layout just with email
        contact and physical address of the grocers-->

        <LinearLayout style="@style/LayoutHorizontal"
            android:id="@+id/email"
            android:layout_below="@id/info">

            <ImageView style="@style/Icon"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/googlemail" />

            <TextView style="@style/TextStandard"
                android:text="@string/email"/>
        </LinearLayout>

        <LinearLayout style="@style/LayoutHorizontal"
            android:id="@+id/address"
            android:layout_below="@id/email">

            <ImageView style="@style/Icon"
                android:contentDescription="@string/map_pin"
                android:src="@drawable/mappin" />

            <TextView style="@style/TextStandard"
                android:text="@string/address"/>
        </LinearLayout>


        <include layout="@layout/social_media_buttons"
            android:id="@+id/social"
            android:layout_below="@id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/fruit_veg_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fruit_veg_image"
            android:layout_below="@id/social"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/image_margin"
            android:src="@drawable/fruit_veg1small"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
